[package]
name = "go-duration"
version = "0.1.0"
edition = "2021"
authors = ["Gwon Seonggwang <g.passcode@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
nom = { version = "7", default-features = false }
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = "1"

[dev-dependencies]
serde_test = "1"
serde_json = "1"
