[package]
name = "go-duration"
description = "A parsing and formatting library for Go-lang style `time.Duration`."
version = "0.2.0"
edition = "2021"
authors = ["Gwon Seonggwang <g.passcode@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/grhbit/go-duration"
repository = "https://github.com/grhbit/go-duration"
keywords = ["duration", "time"]
categories = ["parser-implementations", "value-formatting"]
rust-version = "1.66.1"
exclude = [
    "/.github",
    "/cliff.toml",
    "/deny.toml",
]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
nom = { version = "8", default-features = false }
serde = { version = "1", default-features = false, optional = true, features = [
    "derive",
] }
thiserror = "2"

[dev-dependencies]
serde_test = "1"
serde_json = "1"
